[tool.poetry]
name = "zts-music"
version = "0.1.0"
description = ""
authors = ["Zaheeb Tariq aaheeb07@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^1.7.3"
discord = "^1.7.3"
wikipedia = "^1.4.0"
wolframalpha = "^5.0.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
